src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Date_field__c</fullName>
        <description>ytytyt</description>
        <label>Date field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Buyer_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Buyer Persona</label>
        <referenceTo>LeanData__Buyer_Persona__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Modified_Score__c</fullName>
        <label>Modified Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tag__c</fullName>
        <label>Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadScoring__Campaign_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Total_Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <formula>leadScoring__Lead_Score__c + leadScoring__Campaign_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>